@@ -8,6 +8,9 @@ Revision history for Perl extension Business::DPD
     - add Business::DPD::Address (for DPD addresses handling)
     - add Business::DPD country_alpha2() and routing_meta() functions
     - add Business::DPD::Parcel get status of a parcel
+    - country_code number is now zero padded 3 characters long
+      fixing labels to AD AF AG AL AM AO AQ AR AS AT AU AZ BA BB BD BE
+                       BH BM BN BO BR BS BT BV BW BZ DZ IO SB VG
 
 0.21   2009-02-13 12:10:26
     - Improve rendering to stick closer to official UPS-Label spec
